--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -306,120 +306,120 @@
   },
   "aigisMod:AtnatesPlatinum": {
     "NAME": "Atnates",
-    "DESCRIPTION": "Deal !D! aigismod:true_damage. NL Gain [E] [E] NL You can Exhaust 1 card in draw pile.",
+    "DESCRIPTION": "!D! aigismod:관통 데미지를 가합니다. NL [E] [E] 를 얻습니다. NL 뽑을 카드 더미에서 카드 1 장을 소멸시킬 수 있습니다.",
     "EXTENDED_DESCRIPTION" : [
       "He Who Knows the Abyss"
     ]
   },
   "aigisMod:AtnatesBlack": {
     "NAME": "Atnates",
-    "DESCRIPTION": "Deal !D! aigismod:true_damage 2 times. NL Gain [E] [E] NL You can Exhaust 1 card in draw pile.",
+    "DESCRIPTION": "!D! aigismod:관통 데미지를 2 회 가합니다. NL [E] [E] 를 얻습니다. NL 뽑을 카드 더미에서 카드 1 장을 소멸시킬 수 있습니다.",
     "EXTENDED_DESCRIPTION" : [
       "He Who Knows the Abyss"
     ]
   },
   "aigisMod:LanchePlatinum": {
     "NAME": "Lanche",
-    "DESCRIPTION": "Gain 1 Max HP for each enemy. NL Gain 1 Intangible. Target enemy loses !M! Strength. NL Exhaust.",
+    "DESCRIPTION": "적 1 체당 1 최대 체력 얻습니다. NL 불가침을 1 획득합니다. NL 타켓이 힘 !M! 을 잃습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Leads to Victory"
     ]
   },
   "aigisMod:LancheBlack": {
     "NAME": "Lanche",
-    "DESCRIPTION": "Gain 2 Max HP for each enemy. NL Gain 1 Intangible. Target enemy loses !M! Strength. NL Exhaustive: !stslib:ex!",
+    "DESCRIPTION": "적 1 체당 2 최대 체력 얻습니다. NL 불가침을 1 획득합니다. NL 타켓이 힘 !M! 을 잃습니다. NL aigismod:잔여횟수 : !stslib:ex!",
     "EXTENDED_DESCRIPTION" : [
       "She Who Leads to Victory"
     ]
   },
   "aigisMod:VidyaPlatinum": {
     "NAME": "Vidya",
-    "DESCRIPTION": "At the start of turn, reduce the cost of !M! card(s) in hand by 1 for the turn.",
+    "DESCRIPTION": "턴 시작시 손패의 카드를 !M! 장 코스트를 1 감소시킵니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Quells the Ravages of War"
     ]
   },
   "aigisMod:VidyaBlack": {
     "NAME": "Vidya",
-    "DESCRIPTION": "Innate. NL At the start of turn, reduce the cost of !M! card(s) in hand by 1 for the turn.",
+    "DESCRIPTION": "선천성. NL 턴 시작시 손패의 카드를 !M! 장 코스트를 1 감소시킵니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Quells the Ravages of War"
     ]
   },
   "aigisMod:XuhuaPlatinum": {
     "NAME": "Xuhua",
-    "DESCRIPTION": "Gain X Thorns. NL Gain !M! aigismod:counter. NL Gain !B! Block.",
+    "DESCRIPTION": "X 가시를 얻습니다. NL !M! aigismod:카운터를 얻습니다. NL !B! 방어도를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who is Mother to Dahua"
     ]
   },
   "aigisMod:XuhuaBlack": {
     "NAME": "Xuhua",
-    "DESCRIPTION": "Gain X+2 Thorns. NL Gain !M! aigismod:counter. NL Gain !B! Block.",
+    "DESCRIPTION": "X+2 가시를 얻습니다. NL !M! aigismod:카운터를 얻습니다. NL !B! 방어도를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who is Mother to Dahua"
     ]
   },
   "aigisMod:IvrilPlatinum": {
     "NAME": "Ivril",
-    "DESCRIPTION": "Deep Sea NL Deal !D! Damage. NL Apply !M! Poison. NL aigismod:Sailor 1: Shuffle 1 Deadman to draw Pile.",
+    "DESCRIPTION": "aigismod:심해. NL !D! 데미지를 가합니다. NL !M! 중독를 부여합니다. NL aigismod:세일러 1 : 뽑을 카드 더미에 데드맨 1 장을 섞어 넣습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Conquers the Great Sea"
     ]
   },
   "aigisMod:IvrilBlack": {
     "NAME": "Ivril",
-    "DESCRIPTION": "Deep Sea NL Deal !D! Damage to ALL enemies. NL Apply !M! Poison to ALL enemies. NL aigismod:Sailor 1:Shuffle 1 Deadman to draw Pile.",
+    "DESCRIPTION": "aigismod:심해. NL 모든 적에게 !D! 데미지를 가합니다. NL 모든 적에게 !M! 중독를 부여합니다. NL aigismod:세일러 1 : 뽑을 카드 더미에 데드맨 1 장을 섞어 넣습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Conquers the Great Sea"
     ]
   },
   "aigisMod:Deadman": {
-    "NAME": "Deadman",
-    "DESCRIPTION": "Ethereal NL Gain 7 aigismod:Water_pressure. NL Draw 2 cards. NL Gain !M! Vigor. NL Exhaust."
+    "NAME": "데드맨",
+    "DESCRIPTION": "휘발성. NL 7 aigismod:수압을 얻습니다. NL 카드를 2 장 뽑습니다. NL 활력을 !M! 얻습니다. NL 소멸."
   },
   "aigisMod:IldonaPlatinum": {
     "NAME": "Ildona",
-    "DESCRIPTION": "Gain 1 Blur. NL Gain !B! Block. NL Gain !M! aigismod:counter.",
+    "DESCRIPTION": "흐릿함을 1 얻습니다. NL !B! 방어도를 얻습니다. NL !M! aigismod:카운터를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "He Who Leads the Light of Dawn"
     ]
   },
   "aigisMod:IldonaBlack": {
     "NAME": "Ildona",
-    "DESCRIPTION": "Gain 2 Blur. NL Gain !B! Block. NL Gain !M! aigismod:counter.",
+    "DESCRIPTION": "흐릿함을 2 얻습니다. NL !B! 방어도를 얻습니다. NL !M! aigismod:카운터를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "He Who Leads the Light of Dawn"
     ]
   },
   "aigisMod:AlcouPlatinum": {
     "NAME": "Alcou",
-    "DESCRIPTION": "Add 2 Symbol of Dread to discard pile. NL Apply !M! Vulnerable and !M! Weak. NL Enemy loses 10% of its max HP.",
+    "DESCRIPTION": "두려움의 상징 2 장을 버린 카드 더미에 추가합니다. NL !M! 약화와 !M! 취약을 부여합니다. NL 타켓이 최대 체력이 10% 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Sits Upon the Summit"
     ]
   },
   "aigisMod:AlcouBlack": {
     "NAME": "Alcou",
-    "DESCRIPTION": "Add 2 Symbol of Dread to discard pile. NL Apply !M! Vulnerable and !M! Weak. NL Enemy loses 20% of its max HP.",
+    "DESCRIPTION": "두려움의 상징 2 장을 버린 카드 더미에 추가합니다. NL !M! 약화와 !M! 취약을 부여합니다. NL 타켓이 최대 체력이 20% 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Sits Upon the Summit"
     ]
   },
   "aigisMod:DreadSymbol": {
-    "NAME": "Symbol of Dread",
-    "DESCRIPTION": "Take 5 fixed damage. NL If this card is in your hand at the end of your turn, lose 1 Max HP."
+    "NAME": "두려움의 상징",
+    "DESCRIPTION": "5 데미지를 입습니다. NL 만일 이 카드가 턴 종료시 패에 남아 있다면, 최대 HP가 1 감소합니다."
   },
   "aigisMod:OshenPlatinum": {
     "NAME": "Oshen",
-    "DESCRIPTION": "Apply !M! aigismod:lifelink. NL Deal !D! aigismod:true_damage to ALL enemies. NL Gain !B! Block.",
+    "DESCRIPTION": "!M! aigismod:라이프링크를 부여합니다. NL 모든 적에게 aigismod:관통 데미지를 !D! 가합니다. NL !B! 방어도를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Inherits the Light"
     ]
   },
   "aigisMod:OshenBlack": {
     "NAME": "Oshen",
-    "DESCRIPTION": "Apply !M! aigismod:lifelink. NL Deal !D! aigismod:true_damage to ALL enemies. NL Gain !B! Block.",
+    "DESCRIPTION": "!M! aigismod:라이프링크를 부여합니다. NL 모든 적에게 aigismod:관통 데미지를 !D! 가합니다. NL !B! 방어도를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Inherits the Light"
     ]
@@ -4366,6 +4366,15 @@
       "명도부상신"
     ]
   },
+  "aigisMod:Fujimurasaki2": {
+    "NAME": "후지무라사키",
+    "DESCRIPTION": "!M! 가시를 얻습니다. NL 이번 턴 사용된 카드 수만큼 흐릿함을 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!M! 가시를 얻습니다. NL 이번 턴 사용된 카드 수만큼 흐릿함을 얻습니다. NL 소멸.",
+    "EXTENDED_DESCRIPTION": [
+      "명도부상신",
+      "!M! 가시를 얻습니다. NL 이번 턴 사용된 카드 수만큼 흐릿함을 얻습니다. NL 소멸."
+    ]
+  },
   "aigisMod:Rinne2": {
     "NAME": "린네",
     "DESCRIPTION": "X 흐릿함을 얻습니다. NL X 금속화를 얻습니다. NL 피화예견의 거울 1 장을 손패에 추가합니다.",
@@ -4684,6 +4693,15 @@
     "UPGRADE_DESCRIPTION": "aigismod:비행대 NL 모든 적에게 aigismod:아쳐 데미지를 !D! 가합니다. NL 에어 시그널을 사용할 때마다 모든 적에게 !M! 데미지를 가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "흑익의 정예사수"
+    ]
+  },
+  "aigisMod:Lasithi2": {
+    "NAME": "라시티",
+    "DESCRIPTION": "aigismod:비행대 NL aigismod:아쳐 데미지를 !D! 가합니다. NL 에어 시그널을 사용할 때마다 모든 적에게 !M! 데미지를 가합니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:비행대 NL aigismod:아쳐 데미지를 !D! 가합니다. NL 에어 시그널을 사용할 때마다 모든 적에게 !M! 데미지를 가합니다.",
+    "EXTENDED_DESCRIPTION" : [
+      "흑익의 정예사수",
+      "aigismod:비행대 NL 모든 적에게 aigismod:아쳐 데미지를 !D! 가합니다. NL 에어 시그널을 사용할 때마다 모든 적에게 !M! 데미지를 가합니다."
     ]
   },
   "aigisMod:Krehl": {
