--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -283,7 +283,7 @@
     "NAME": "天狗的火焰",
     "FLAVOR": "红莲: 那你就让我见识一下理想的尽头吧。我会帮你到那天的。",
     "DESCRIPTIONS": [
-      "每场战斗一次，你可以 #右击 此遗物，消耗手中的 #b1 张卡， 如果是 #y状态 或 #y诅咒 ， #y抽 #b1 张卡，所有敌人获得 #b3 层灼伤。"
+      "每场战斗一次，你可以 #y右击 此遗物，消耗手中的 #b1 张卡， 如果是 #y状态 或 #y诅咒 ， #y抽 #b1 张卡，所有敌人获得 #b3 层灼伤。"
     ]
   },
   "aigisMod:CatDisturbance": {
