Translations up to date Jan 12 2025
All translations up to date with the Workshop release of 12 of January 2025, along with fixes to ZHS translation.

--- a/localization/eng/AigisMod-Power-Strings.json
+++ b/localization/eng/AigisMod-Power-Strings.json
@@ -534,7 +534,10 @@
                 "NAME": "Knights of the Round",
                 "DESCRIPTIONS": ["At the start of turn, choose #b", " cards in hand, reduce their cost by 1 this turn."]
         },
-
+        "aigisMod:WeavingofFuwa": {
+                "NAME": "Weaving of Fuhua",
+                "DESCRIPTIONS": ["When you receive a debuff, gain #b", " #yStrength. At the start of turn, add #b1 #yDaode #yTianzun."]
+        },
 
 
         "aigisMod:StrengthForTheTurnPower": {
