--- a/localization/eng/AigisMod-Card-Strings.json
+++ b/localization/eng/AigisMod-Card-Strings.json
@@ -424,6 +424,40 @@
       "She Who Inherits the Light"
     ]
   },
+  "aigisMod:FuqiPlatinum": {
+    "NAME": "Fuqi",
+    "DESCRIPTION": "When you gain a debuff, gain !M! Strength. NL At the start of turn, add 1 Daode Tianzun. (Weaving of Fuhua) ",
+    "EXTENDED_DESCRIPTION" : [
+      "She Who Is the Foundation of Dahua"
+    ]
+  },
+  "aigisMod:FuqiBlack": {
+    "NAME": "Fuqi",
+    "DESCRIPTION": "When you gain a debuff, gain !M! Strength. NL At the start of turn, add 1 Daode Tianzun.",
+    "EXTENDED_DESCRIPTION" : [
+      "She Who Is the Foundation of Dahua"
+    ]
+  },
+  "aigisMod:Daode": {
+    "NAME": "Daode Tianzun",
+    "DESCRIPTION": "Deal !D! damage 3 times."
+  },
+  "aigisMod:FinessePlatinum": {
+    "NAME": "Finesse",
+    "DESCRIPTION": "Gain !M! Max HP. NL Add 1 card from draw pile to your hand, it becomes cost 0 for the combat. NL Exhaust",
+    "EXTENDED_DESCRIPTION" : [
+      "She Who Weaves the Battlefield"
+    ]
+  },
+  "aigisMod:FinesseBlack": {
+    "NAME": "Finesse",
+    "DESCRIPTION": "Gain !M! Max HP. NL Add 1 card from draw pile to your hand, it becomes cost 0 for the combat. NL Exhaustive: 2",
+    "EXTENDED_DESCRIPTION" : [
+      "She Who Weaves the Battlefield"
+    ]
+  },
+
+
 
 
 
@@ -1341,6 +1375,15 @@
     "UPGRADE_DESCRIPTION": "Choose 1 card from Discard Pile. This card effect becomes a copy of that card. NL Apply 2 Weak to ALL enemies. NL Exhaust.",
     "EXTENDED_DESCRIPTION" : [
       "Youri"
+    ]
+  },
+  "aigisMod:Yashima2": {
+    "NAME": "Yashima",
+    "DESCRIPTION": "Choose 1 card from Discard Pile. This card effect becomes a copy of that card. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Choose 1 card from Discard Pile. This card effect becomes a copy of that card. NL Gain 2 Max Hp. NL Exhaust.",
+    "EXTENDED_DESCRIPTION" : [
+      "Youri",
+      "Choose 1 card from Discard Pile. This card effect becomes a copy of that card. NL Gain 2 Strength. NL Exhaust."
     ]
   },
   "aigisMod:Yukari": {
@@ -2817,13 +2860,21 @@
       "Deal !D! Damage, if it kills add a copy of this to Discard Pile. NL Lose 1 Strength. aigismod:Cursed: ALL enemies lose 1 Strength. NL Exhaust."
     ]
   },
-
   "aigisMod:Koma": {
     "NAME": "Koma",
     "DESCRIPTION": "Shuffle 1 Shishi to draw pile. NL When you draw a Status or Curse draw 1 card and gain !M! Block.",
     "UPGRADE_DESCRIPTION": "Shuffle 1 Shishi to draw pile. NL When you draw a Status or Curse draw 1 card and gain !M! Block.",
     "EXTENDED_DESCRIPTION" : [
       "Komainu"
+    ]
+  },
+  "aigisMod:Koma2": {
+    "NAME": "Koma",
+    "DESCRIPTION": "Shuffle 1 Shishi to draw pile. NL When you draw a Status or Curse draw 1 card and gain !M! Block.",
+    "UPGRADE_DESCRIPTION": "Shuffle 1 Shishi+ to draw pile. NL When you draw a Status or Curse draw 1 card and gain !M! Block.",
+    "EXTENDED_DESCRIPTION" : [
+      "Komainu",
+      "Shuffle 1 Shishi to draw pile. NL When you draw a Status or Curse draw 1 card and gain !M! Block."
     ]
   },
   "aigisMod:Shishi": {
@@ -5375,8 +5426,8 @@
 
 
   "aigisMod:Note": {
-    "NAME": "Remaining Hero cards, august update",
-    "DESCRIPTION": "implement these: Atnates, Lanche, Vidya, Xuhua, Ivril, Deadman, Ildona, Alcou, Symbol of Dread, Oshen",
+    "NAME": "",
+    "DESCRIPTION": "implement these: ",
     "UPGRADE_DESCRIPTION": "They are on the top of the file",
     "EXTENDED_DESCRIPTION" : [
       ""
@@ -6026,23 +6077,6 @@
       "Miko"
     ]
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 }
 
